# core-framework

./: .gitignore  .gitlab-ci.yml  COPYRIGHT  README.md  pom.xml
GPP/cpp/: .gitignore  .md5sums  GPP.cpp  GPP.h  GPP_base.cpp  GPP_base.h  Makefile.am  Makefile.am.ide  NicAllocator.cpp  NicAllocator.h  NicFacade.cpp  NicFacade.h  NicInterfaceFilter.cpp  NicInterfaceFilter.h  affinity_struct.h  build.sh  configure.ac  create_node.py  devconfig.py  gpp_setup  main.cpp  reconf  struct_props.h
GPP/cpp/parsers/: Parser.h  ParserExceptions.h  ProcMeminfoParser.cpp  ProcStatFileParser.h  ProcStatParser.cpp  ProcStatParser.h
GPP/cpp/reports/: CpuThresholdMonitor.cpp  CpuThresholdMonitor.h  FreeMemoryThresholdMonitor.cpp  FreeMemoryThresholdMonitor.h  NicThroughputThresholdMonitor.cpp  NicThroughputThresholdMonitor.h  Reporting.h  SystemMonitorReporting.cpp  SystemMonitorReporting.h  ThresholdMonitor.cpp  ThresholdMonitor.h
GPP/cpp/states/: CpuState.cpp  Limits.cpp  NicState.cpp  NicState.h  ProcMeminfo.cpp
GPP/cpp/statistics/: CpuUsageAccumulator.cpp  CpuUsageStats.cpp  CpuUsageStats.h  NicAccumulator.h  Statistics.h
GPP/cpp/utils/: CmdlineExecutor.h  EnvironmentPathParser.cpp  EnvironmentPathParser.h  FileReader.cpp  IOError.h  Updateable.h  affinity.cpp  affinity.h  popen.cpp  popen.h
bulkioInterfaces/: .cproject  .gitignore  .project  MANIFEST.in  Makefile.am  Makefile.am.ide  README.md  bio_dataChar.idl  bio_dataFile.idl  bio_dataLong.idl  bio_dataOctet.idl  bio_dataUlong.idl  bio_dataUlongLong.idl  bio_dataUshort.idl  bio_dataVITA49.idl  bio_dataXML.idl  build.sh  bulkio-1.0.0  bulkioDataTypes.idl  bulkioInterfaces.pc.in  bulkioInterfaces.spec  configure.ac  pom.xml  reconf  setup.py.in
bulkioInterfaces/docs/: Doxyfile  README
bulkioInterfaces/jni/: Makefile.am
bulkioInterfaces/libsrc/: .gitignore  Makefile.am  README  bulkio.pc.in  install_py  pom.xml  setup.py
bulkioInterfaces/libsrc/cpp/: BULKIO_Interfaces.h  BulkioTransport.cpp  CorbaTransport.cpp  CorbaTransport.h  LocalTransport.cpp  LocalTransport.h  ShmInputTransport.h  ShmProvidesTransport.h  ShmTransport.cpp  ShmTransport.h  bulkio.cpp  bulkio.h  bulkio_attachable_base.h  bulkio_attachable_port.cpp  bulkio_base.h  bulkio_compat.h  bulkio_connection.hpp  bulkio_datablock.cpp  bulkio_datablock.h  bulkio_datatransfer.h  bulkio_in_port.cpp  bulkio_in_port.h  bulkio_in_stream.cpp  bulkio_in_stream.h  bulkio_out_port.cpp  bulkio_out_port.h  bulkio_out_stream.cpp  bulkio_out_stream.h  bulkio_p.h  bulkio_sri.h  bulkio_sri_helpers.cpp  bulkio_stream.cpp  bulkio_stream.h  bulkio_streamqueue.cpp  bulkio_time_helpers.cpp  bulkio_time_operators.cpp  bulkio_time_operators.h  bulkio_traits.h  bulkio_transport.cpp  bulkio_transport.h  (+4 more)
bulkioInterfaces/libsrc/java/: .gitignore
bulkioInterfaces/libsrc/python/: __init__.py  bulkio_compat.py  const.py  input_ports.py  input_stream.py  output_ports.py  sri.py  statistics.py  timestamp.py
bulkioInterfaces/libsrc/testing/: .gitignore  Makefile.am
burstioInterfaces/: .gitignore  .project  COPYRIGHT  Makefile.am  README.md  burstio.pc.in  burstioInterfaces.pc.in  burstioInterfaces.spec  configure.ac  pom.xml  reconf
burstioInterfaces/docs/: Doxyfile  README
burstioInterfaces/src/cpp/: Makefile.am
burstioInterfaces/src/idl/: Makefile.am
burstioInterfaces/src/java/: Makefile.am  pom.xml
burstioInterfaces/src/python/: Makefile.am  setup.py.in
burstioInterfaces/testing/tests/: .gitignore  buildtests  runtests
frontendInterfaces/: .cproject  .gitignore  .project  Frontend.idl  MANIFEST.MF.in  Makefile.am  Makefile.am.ide  README.md  RFInfo.idl  TunerControl.idl  assembly.xml  build.sh  configure.ac  frontendInterfaces.pc.in  frontendInterfaces.spec  pom.xml  reconf  reconf.launch
frontendInterfaces/libsrc/: Makefile.am  frontend.pc.in  install_py  pom.xml  setup.py
frontendInterfaces/libsrc/cpp/: fe_compat.h  fe_gps_port_impl.h  fe_navdata_port_impl.h  fe_port_impl.cpp  fe_port_impl.h  fe_rfinfo_port_impl.h  fe_rfsource_port_impl.cpp  fe_rfsource_port_impl.h  fe_tuner_device.cpp  fe_tuner_device.h  fe_tuner_port_impl.h  fe_tuner_struct_props.h  fe_types.h  frontend.h
frontendInterfaces/libsrc/python/: __init__.py  fe_types.py  frontend_compat.py  input_ports.py  output_ports.py  sri.py  tuner_device.py
redhawk/src/: .clang-tidy  .coveragerc  .gitignore  COPYRIGHT  INSTALL  Makefile.am  astylerc  beautify.sh  build.sh  configure.ac  doit.sh  ossie.pc.in  reconf
redhawk/src/acinclude/: ACX_PTHREAD.m4  AC_CHECK_PYMODULE.m4  AC_CORBA_IDLCOS.m4  AC_CORBA_OMNIEVENTS.m4  AC_CORBA_OMNI_PLATFORM.m4  AC_CORBA_ORB.m4  AC_CORBA_ORB_OMNIORB3.m4  AC_CORBA_ORB_OMNIORB4.m4  AC_CORBA_SEARCHDIRS.m4  AC_CXX_CLEAN_TEMPLATE_REPOSITORY.m4  AC_FUNC_SIGSET.m4  AC_HAVE_XERCES_C.m4  AC_M_FUNCTION_INTEGRATION.m4  AC_PROG_OMNIIDL.m4  Apache_license.txt  Makefile.am  ax_cxx_gcc_abi_demangle.m4  boost.m4  boost_thread.m4  grlab.m4  java.m4  octave.m4  ossie.m4  redhawk.m4  rhpkg.m4  testdir.m4  unitdir.m4
redhawk/src/aminclude/: idlj.am  jarfile.am
redhawk/src/base/: .gitignore  Makefile.am
redhawk/src/control/: .autotools  .classpath  .cproject  .project  .pydevproject  Makefile.am
redhawk/src/etc/: Makefile.am
redhawk/src/idl/: Makefile.am
redhawk/src/omnijni/: .gitignore  Makefile.am  pom.xml
redhawk/src/releng/: RPM-GPG-KEY-redhawk  genIPK.sh.template  redhawk-install.sh  redhawk-services.spec  redhawk.spec  rpmsign-batch.expect  yumgroups.xml
redhawk/src/testing/: .gitignore  Makefile.am  devmgr_config.cfg  domtest.cfg  hierarchical_log.cfg  high_thresh.cfg  logconfig.cfg  macro_config.cfg  runtest.props  runtests-api  runtests.py  setup.py
redhawk/src/tools/: .gitignore  Makefile.am  redhawk-devtoolset-disable.sh  redhawk-devtoolset-enable.sh  (+1 more)
throughput/: .gitignore  Makefile.am  README.md  configure.ac  reconf  redhawk-benchmark
throughput/benchmark/: __init__.py  csv.py  numa.py  procinfo.py  tests.py  utils.py
throughput/common/: threaded_deleter.h  timing.h
throughput/streams/: aggregate.py
throughput/tools/: basic_throughput.py  speedometer.py
(+5507 files in other folders)
